--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html {
+    max-width: 80ch;
+    padding: 1em 1em;
+    margin: auto;
+    line-height: 1.75;
+    font-size: 1.15em;
+  }
